--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "google-maps-react": "^2.0.6",
     "mongodb": "6.3",
-    "mongoose": "^8.1.1",
-    "react-scripts": "^5.0.1"
+    "mongoose": "^8.1.1"
   }
 }
