--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,68 @@
-# Dependencies
+# Dependency directories
 node_modules/
+client/node_modules/
+server/node_modules/
 
-# Environment variables
+# Environment configuration files
 .env
 .env.local
-.env.*.local
-.env.test
+.env.development.local
+.env.test.local
+.env.production.local
+server/.env
+server/.env.local
+server/.env.development.local
+server/.env.test.local
+server/.env.production.local
 
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-logs/
-*.log
-
-# Operating system files
-.DS_Store
-Thumbs.db
+server/logs/
+server/*.log
 
 # Editor directories and files
 .idea/
 .vscode/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
 # Build output
-/build
 /dist
+/build
+/client/build
+/server/build
 
-# Temporary files
-.tmp/
+# Temp files
+.DS_Store
+Thumbs.db
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional: Mac OS node_modules volume binding issue with Docker
+**/node_modules/**/.dockerignore
+
+# Optional: Docker Container Volumes
+.docker-volumes/
+
+# Database files (if any are stored locally in the server directory for development)
+server/*.sqlite
+server/*.db
+
+# Security
+server/security/
+server/*.pem
+server/*.key
+server/*.cert
+
+# Uploads (if your server handles file uploads and stores them locally for development)
+server/uploads/
