--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "hotel-finder",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "google-maps-react": "^2.0.6",
-    "mongodb": "6.3",
-    "mongoose": "^8.1.1"
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
