--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm start\" \"cd ../next-app && npm run dev\""
+    "dev": "concurrently \"npm start\" \"cd ../next-app && npm run dev\" \"cd ../server && npm start\""
   },
   "eslintConfig": {
     "extends": [
