--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "axios": "^1.6.8",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   }
 }
