--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "routes": [
         {
-            "source": "/(.*)",
-            "destination": "index.js"
+            "src": "/(.*)",
+            "dest": "index.js"
         }
     ]
 }
