--- a/next-app/package.json
+++ b/next-app/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "next": "latest",
     "react": "^17.0.2",
